# base

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT.txt  Dockerfile  Doxyfile  Makefile.am  Makefile.dist  README  README.md  TODO  acconfig.h  azure-default.yml  azure-pipelines.yml  azure-slow.yml  base.kdevprj  base.lsm  base.natvis  base.rc.in  base.spec  build.h.in  common.am  config.h.in  configure  configure.ac  configure.in  libtool  test
base/: AnyValue.cpp  AnyValue.h  Application.cpp  Application.h  Architecture.cpp  Architecture.h  ArgumentException.cpp  ArgumentException.h  ArgumentParser.cpp  ArgumentParser.h  AutomationObject.h  Base.cpp  Base.h  BidirectionalIterator.h  ByteOrder.h  Cast.cpp  Cast.h  CastException.cpp  CastException.h  Character.cpp  Character.h  Comparable.h  Construct.cpp  Construct.h  Copyable.h  Daemon.cpp  Daemon.h  Date.cpp  Date.h  DateException.cpp  DateException.h  Destruct.cpp  Destruct.h  DeviceException.cpp  DeviceException.h  Dimension.cpp  Dimension.h  Double.cpp  Double.h  DynamicObject.cpp  (+132 more)
base/archive/: Makefile.am  archive.cpp
base/cloud/: Analytics.cpp  Analytics.h
base/collection/: Algorithm.h  AlreadyKeyException.cpp  AlreadyKeyException.h  AmbiguousRegistration.cpp  AmbiguousRegistration.h  Array.cpp  Array.h  ArrayEnumeration.h  ArrayMap.cpp  ArrayMap.h  Association.cpp  Association.h  BinaryNode.h  BinaryTree.h  BitSet.cpp  BitSet.h  Cache.cpp  Cache.h  Collection.cpp  Collection.h  ContainerException.cpp  ContainerException.h  DoubleLinkedNode.h  EmptyContainer.cpp  EmptyContainer.h  EndOfEnumeration.cpp  EndOfEnumeration.h  Enumeration.cpp  Enumeration.h  Functor.h  Hash.h  HashSet.cpp  HashSet.h  HashTable.cpp  HashTable.h  InvalidContainer.cpp  InvalidContainer.h  InvalidEnumeration.cpp  InvalidEnumeration.h  InvalidKey.cpp  (+22 more)
base/communication/: CommunicationsException.cpp  CommunicationsException.h  CommunicationsPort.cpp  CommunicationsPort.h  DummyIEEE1394.cpp  DummyIEEE1394.h  EUI64.cpp  EUI64.h  IEEE1394.cpp  IEEE1394.h  IEEE1394Common.h  IEEE1394Exception.cpp  IEEE1394Exception.h  IEEE1394Impl.cpp  IEEE1394Impl.h  LinuxRawIEEE1394.cpp  LinuxRawIEEE1394.h  Makefile.am  SerialPort.cpp  SerialPort.h
base/compression/: BZip2Deflater.cpp  BZip2Deflater.h  BZip2Inflater.cpp  BZip2Inflater.h  Deflater.cpp  Deflater.h  Huffman.cpp  Huffman.h  Inflater.cpp  Inflater.h  Makefile.am  ZLibDeflater.cpp  ZLibDeflater.h  ZLibInflater.cpp  ZLibInflater.h
base/concurrency/: ApplicationSynchronize.cpp  ApplicationSynchronize.h  AtomicCounter.cpp  AtomicCounter.h  Barrier.cpp  Barrier.h  BarrierException.h  ConcurrencyException.cpp  ConcurrencyException.h  Event.cpp  Event.h  EventException.cpp  EventException.h  Exception.h  ExclusiveSynchronize.cpp  ExclusiveSynchronize.h  Lock.cpp  Lock.h  LockException.cpp  LockException.h  Makefile.am  MutualExclusion.cpp  MutualExclusion.h  MutualExclusionException.cpp  MutualExclusionException.h  NISpinLock.cpp  NISpinLock.h  Once.cpp  Once.h  Process.cpp  Process.h  ReadWriteLock.cpp  ReadWriteLock.h  ReadWriteLockException.cpp  ReadWriteLockException.h  ReadWriteSpinLock.cpp  ReadWriteSpinLock.h  RecursiveMutualExclusion.cpp  RecursiveMutualExclusion.h  RecursiveSpinLock.cpp  (+25 more)
base/data/: CSVFormat.cpp  CSVFormat.h  DataTable.cpp  DataTable.h
base/dl/: DynamicLinker.cpp  DynamicLinker.h  LinkerException.cpp  LinkerException.h  LinkerManager.cpp  LinkerManager.h  LinkerModule.cpp  LinkerModule.h  Makefile.am  module.cpp
base/docs/: Makefile.am  examples.doxygen  mainpage.doxygen
base/extension/: Makefile.am  extension.doxygen  findextensions.sh
base/filesystem/: File.cpp  File.h  FileException.h  FileInfo.cpp  FileInfo.h  FileSystem.cpp  FileSystem.h  FileSystemException.h  Folder.cpp  Folder.h  FolderException.h  FolderInfo.cpp  FolderInfo.h  FolderMonitor.cpp  FolderMonitor.h  Makefile.am
base/io/: AccessDenied.cpp  AccessDenied.h  BindException.cpp  BindException.h  BrokenStream.cpp  BrokenStream.h  BufferedInputStream.cpp  BufferedInputStream.h  BufferedOutputStream.cpp  BufferedOutputStream.h  EOFException.cpp  EOFException.h  EndOfFile.cpp  EndOfFile.h  Externalizable.h  File.cpp  File.h  FileDescriptor.cpp  FileDescriptor.h  FileDescriptorInputStream.cpp  FileDescriptorInputStream.h  FileDescriptorOutputStream.cpp  FileDescriptorOutputStream.h  FileException.h  FileInputStream.cpp  FileInputStream.h  FileNotFound.cpp  FileNotFound.h  FileOutputStream.cpp  FileOutputStream.h  FileReader.cpp  FileReader.h  FileRegion.cpp  (+39 more)
config/: Makefile.am  aio.c  anonymous_struct.c  anonymous_struct.cpp  bool.cpp  borland.cpp  byteorder.c  char_size.cpp  const.cpp  cross++.cpp  cross.c  double.cpp  float.cpp  float_word_order.cpp  floating.h  gcc.cpp  inline.c  inline.cpp  int_size.cpp  intel.cpp  ipv6.c  largefile.c  long_double.cpp  long_long_size.cpp  long_size.cpp  mbrtowc.c  mbsrtowcs.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  mipspro.cpp  msc.cpp  nanosleep.c  pointer_size.cpp  poll.c  pselect.c  pthread.c  pthread_rwlock.c  (+16 more)
static/: Makefile.am  i386-unknown-cygwin  i386-unknown-linux-gnu  i386-unknown-mingw32  i486-unknown-cygwin  i486-unknown-linux-gnu  i486-unknown-mingw32  i586-unknown-cygwin  i586-unknown-linux-gnu  i586-unknown-mingw32  i686-unknown-cygwin  i686-unknown-linux-gnu  i686-unknown-mingw32  ia64-unknown-linux-gnu  mips-sgi-irix65  s390-ibm-linux-gnu  sparc-sun-solaris2.7  sparc-sun-solaris2.8  sparc-sun-solaris2.8-64bit  sparc-sun-solaris2.9  sparcv9-sun-solaris2.8  sparcv9-sun-solaris2.9  static.sh
testsuite/: .gitignore  ArgumentParser.cpp  Array.cpp  BitSet.cpp  CMakeLists.txt  Date.cpp  Exception.cpp  File.cpp  Function.cpp  HashSet.cpp  HashTable.cpp  Huffman.cpp  IEEE1394.cpp  JSON.cpp  List.cpp  Makefile.am  Makefile.dist  Makefile.test  Map.cpp  MyLinkerModule.cpp  MyLinkerModule.h  ObjectModel.cpp  OpenCL.cpp  Process.cpp  Queue.cpp  Quota.cpp  SerialPort.cpp  Set.cpp  Stack.cpp  String.cpp  Thread.cpp  Version.cpp  aclocal.m4  aes.cpp  calendar.cpp  cipher.cpp  client.cpp  codesearch.cpp  coff.cpp  compress.cpp  (+54 more)
(+648 files in other folders)
