####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = ellert 

EXTRA_DIST = ellert.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO ellert.lsm 

####### kdevelop will overwrite this part!!! (end)############
DEFS = @DEFS@
AUTOMAKE_OPTIONS = foreign
SUBDIRS = ellert
EXTRA_DIST = ellert.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO ellert.lsm
